<resources>
    <string name="app_name">IIS UNAM</string>
    <string name="shared_preferences_name">IISSharedPreferences</string>


    <!-- Strings related to navigation -->
    <string name="navigation_solicitudes">Mis Solicitudes</string>
    <string name="navigation_solicitud">Avance de la solicitud</string>
    <string name="navigation_tramite">Registro al Trámite</string>
    <string name="navigation_tramites_personales">Trámites personales</string>
    <string name="navigation_tramites_institucionales">Trámites istitucionales</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_rfc">RFC</string>

    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Instituto de Investigaciones Sociales</string>
    <string name="nav_header_subtitle">app.iis@sociales.unam.mx </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Salir</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_notification">Notificación</string>

    <string name="menu_tramites">Trámites disponibles</string>
    <string name="menu_solicitudes">Solicitudes a Trámites</string>
    <string name="menu_tramites_personales">Personales</string>
    <string name="menu_tramites_institucionales">Institucionales</string>


    <string name="welcome_text">Bienvenido</string>


    <string name="saved_api_token">SavedApiToken</string>
    <string name="saved_user_name">SavedUserName</string>
    <string name="saved_user_rfc">SavedUserRFC</string>
    <string name="saved_user_email">SavedUserEmail</string>

    <string name="saved_user_iis_role">SavedUserIisRole</string>
    <string name="saved_user_role">SavedUserRole</string>

    <string name="saved_user_picture_url">SavedUserPictureUrl</string>
    <string name="saved_user_user_type">SavedUserUserType</string>
    <string name="saved_user_department">SavedUserDepartment</string>
    <string name="saved_user_floor">SavedApiFloor</string>
    <string name="saved_user_hall">SavedUserHall</string>
    <string name="saved_user_gender">SavedUserGender</string>
    <string name="saved_user_grade">SavedUserGrade</string>
    <string name="saved_user_position">SavedUserPosition</string>


    <string name="saved_user_logged_in">SavedUserLoggedIn</string>
    <string name="saved_fcm_token">SavedUserFCMToken</string>


    <!-- Strings related to tramite -->
    <string name="tramite_departments">Departamentos responsables</string>
    <string name="tramite_descripcion">Detalles del trámite</string>
    <string name="tramite_name">Nombre</string>
    <string name="tramite_instructions">Instrucciones</string>
    <string name="tramite_addition_info">Información adicional</string>
    <string name="register_to_tramite">Registrar solicitud al trámite</string>


    <!-- Strings related to solicitudes -->
    <string name="solicitudes_info">Datos de la solicitud</string>
    <string name="solicitudes_tramite_info">Datos del trámite</string>
    <string name="solicitudes_step_conditions_info">Condiciones de la solicitud</string>
    <string name="solicitudes_progress">Avance de la solicitud</string>


    <string name="tramite_status">Estado de la solicitud</string>
    <string name="current_step">Etapa actual</string>
    <string name="started_at">Fecha de registro</string>


    <string name="solicitud_current_step_name">Nombre</string>
    <string name="solicitud_current_step_description">Descripción</string>
    <string name="solicitud_current_step_ninstructions">Indicaciones</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>