<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.iisapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.iisapp.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification_list" />

    <fragment
        android:id="@+id/nav_solicitudes"
        android:name="com.example.iisapp.ui.solicitudes.SolicitudesFragment"
        android:label="@string/navigation_solicitudes"
        tools:layout="@layout/fragment_solicitudes_list">
        <action
            android:id="@+id/action_nav_solicitudes_to_nav_solicitud"
            app:destination="@id/nav_solicitud" />
    </fragment>

    <fragment
        android:id="@+id/nav_solicitud"
        android:name="com.example.iisapp.ui.solicitudes.SolicitudFragment"
        android:label="@string/navigation_solicitud"
        tools:layout="@layout/fragment_solicitudes_list">
        <argument
            android:name="solicitudPosition"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_tramites_personales"
        android:name="com.example.iisapp.ui.tramites.TramitesPersonalFragment"
        android:label="@string/navigation_tramites_personales"
        tools:layout="@layout/fragment_tramite_list">
        <action
            android:id="@+id/action_nav_tramites_to_nav_tramite"
            app:destination="@id/nav_tramite" />
    </fragment>
    <fragment
        android:id="@+id/nav_tramites_institucionales"
        android:name="com.example.iisapp.ui.tramites.TramitesInstitucionalFragment"
        android:label="@string/navigation_tramites_institucionales"
        tools:layout="@layout/fragment_tramite_list">
        <action
            android:id="@+id/action_nav_tramites_to_nav_tramite"
            app:destination="@id/nav_tramite" />
    </fragment>
    <fragment
        android:id="@+id/nav_tramite"
        android:name="com.example.iisapp.ui.tramites.TramiteFragment"
        android:label="@string/navigation_tramite"
        tools:layout="@layout/fragment_tramite">
        <argument
            android:name="tramitePosition"
            app:argType="integer" />
    </fragment>


</navigation>