<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBG2"
    tools:context="com.iis.app.ui.tramites.TramiteFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tramiteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Estado"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                />

            <com.iis.app.ui.components.TextViewLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/solicitudes_tramite_info"
                android:paddingTop="20dp"/>

            <TextView
                android:id="@+id/tramiteDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Estado"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/normal_text_size"
                android:paddingTop="5dp"
                android:textColor="@color/textColor"
                />


            <com.iis.app.ui.components.TextViewLabel
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:text="@string/tramite_instructions"
                android:paddingTop="20dp"/>


            <TextView
                android:id="@+id/tramiteInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Estado"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/normal_text_size"
                android:paddingTop="5dp"
                android:textColor="@color/textColor"
                />






            <com.iis.app.ui.components.TextViewLabel
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:text="@string/tramite_addition_info"
                android:paddingTop="20dp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tramiteData"
                android:layout_width="fill_parent"
                android:layout_height="343dp"
                android:orientation="vertical"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/fragment_tramite_data"
                />

            <!-- <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="bottom|center">

                <Button
                    android:id="@+id/registerToTramite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:text="@string/register_to_tramite" />
            </LinearLayout> -->


        </LinearLayout>




    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
