<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Nombre del tramite"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/started_at"
            android:textColor="@color/iis_label"
            android:textSize="@dimen/iis_label_size"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/startedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha de registro:"
            android:textSize="12dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/tramite_status"
            android:textColor="@color/iis_label"
            android:textSize="@dimen/iis_label_size"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/badge_primary"
            android:text="Status"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="12dp"/>

    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/solicitudes_progress"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/iis_label"
        android:textSize="14dp"
        android:textStyle="bold"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:progressDrawable="@drawable/greenprogress"
        android:max="100"
        android:progress="50" />


</LinearLayout>


<!--

<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    >



    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"

        app:cardBackgroundColor="#E8E8E8"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingBottom="5dp"
                    android:text="Nombre del tramite"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/white"
                    android:textSize="17dp"
                    android:padding="5dp"
                    android:background="@color/iis_black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/badge_primary"
                    android:text="Status"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/started_at"
                    android:textColor="@color/iis_label"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:id="@+id/startedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fecha de registro:"
                    android:textSize="12dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/black"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/tramite_departments"
                    android:textColor="@color/iis_label"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/solicitudes_progress"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/iis_label"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"/>

                <ProgressBar
                    android:id="@+id/determinateBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="50" />



    </LinearLayout>
    </LinearLayout>

    </androidx.cardview.widget.CardView>


    </LinearLayout>


-->